--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,20 @@ html {
 .body {
     font-family: 'Lato', sans-serif;
     background-color: rgba(255, 255, 255, 0.74);
+    background-image: url("../images/plantsOnCoins.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
 }
 
 .header {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     font-size: 40px;
     font-weight: bolder;
     font-style: oblique;
@@ -27,9 +36,10 @@ html {
 }
 
 .footer {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin: 20px;
     font-size: 20px;
     font-weight: bold;
-    color: rgb(26 95 30 / 74%);
+    color: rgb(255, 255, 255);
 }
