background image changes

--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,11 @@ html {
     background-image: url("../images/plantsOnCoins.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
 
 }
 
 .header {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 40px;
     font-weight: bolder;
     font-style: oblique;
@@ -36,10 +30,10 @@ html {
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: 20px;
     font-size: 20px;
     font-weight: bold;
     color: rgb(255, 255, 255);
+
 }
